--- a/contrib/extensions/healthcheck/pom.xml
+++ b/contrib/extensions/healthcheck/pom.xml
@@ -7,28 +7,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache</groupId>
-        <artifactId>apache</artifactId>
-        <version>10</version>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>sling</artifactId>
+        <version>15</version>
         <relativePath />
     </parent>
 
     <groupId>org.apache.sling</groupId>
-    <artifactId>org.apache.sling.muppet.reactor</artifactId>
+    <artifactId>org.apache.sling.hc.reactor</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>Muppet Reactor POM</name>
-    <inceptionYear>2011</inceptionYear>
+    <name>Sling Health Check Tool Reactor POM</name>
+    <inceptionYear>2013</inceptionYear>
 
     <prerequisites>
         <maven>3.0.4</maven>
     </prerequisites>
     
     <modules>
-        <module>muppet-core</module>
-        <module>muppet-rules</module>
-        <module>muppet-sling</module>
+        <module>hc-core</module>
+        <module>hc-rules</module>
+        <module>hc-sling</module>
         <module>sling-demo</module>
         <module>it</module>
     </modules>
