SLING-2822 - rename to 'health check', fix more names
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1469755 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/hc-sling/pom.xml
+++ b/contrib/extensions/healthcheck/hc-sling/pom.xml
@@ -18,7 +18,7 @@
     <packaging>bundle</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>Sling-specific Sling Health Check Components</name>
+    <name>Sling Health Check Sling Components</name>
     <inceptionYear>2013</inceptionYear>
     
     <description>
