SLING-2822 - make JUnit optional
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1469846 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/hc-sling/pom.xml
+++ b/contrib/extensions/healthcheck/hc-sling/pom.xml
@@ -39,6 +39,7 @@
                     <instructions>
                         <Import-Package>
                             org.junit.*;resolution:=optional,
+                            org.apache.sling.junit.*;resolution:=optional,
                             *                            
                         </Import-Package>
                         <Export-Package>
