--- a/bundles/auth/openid/pom.xml
+++ b/bundles/auth/openid/pom.xml
@@ -107,7 +107,7 @@
 		<dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.auth.core</artifactId>
-            <version>1.0.7-SNAPSHOT</version>
+            <version>1.1.0</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
