--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
@@ -25,25 +25,35 @@
     <groupId>org.apache.sling</groupId>
     <artifactId>sling</artifactId>
     <version>15</version>
-    <relativePath>../../../parent/pom.xml</relativePath>
+    <relativePath>../../../../parent/pom.xml</relativePath>
   </parent>
 
-  <artifactId>sling-launchpad-karaf-builder</artifactId>
-  <version>1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <artifactId>org.apache.sling.launchpad.karaf-features</artifactId>
+  <version>0.1.0.BUILD-SNAPSHOT</version>
+  <packaging>feature</packaging>
 
-  <name>Apache Sling Launchpad Karaf Builder</name>
+  <name>Apache Sling Launchpad Karaf - Features</name>
+  <description>Apache Sling Features for provisioning with Apache Karaf</description>
 
-  <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/launchpad/karaf</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/launchpad/karaf</developerConnection>
-    <url>http://svn.apache.org/viewvc/sling/trunk/contrib/launchpad/karaf</url>
-  </scm>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>karaf-maven-plugin</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
+  </build>
 
-  <modules>
-    <module>org.apache.sling.launchpad.karaf</module>
-    <module>org.apache.sling.launchpad.karaf-features</module>
-    <module>org.apache.sling.launchpad.karaf-integration-tests</module>
-  </modules>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>org.apache.repository.snapshots</id>
+      <url>https://repository.apache.org/content/groups/snapshots-group/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
