Add discovery impl to reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1470557 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -89,6 +89,7 @@
           <module>extensions/apt/parser</module>
           <module>extensions/apt/servlet</module>
           <module>extensions/discovery/api</module>
+          <module>extensions/discovery/impl</module>
           <module>extensions/dojo</module>
           <module>extensions/dojo-sling</module>
           <module>extensions/ftpserver</module>
