--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -61,6 +61,9 @@ queue.maxparallel.name = Maximum Parallel Jobs
 queue.maxparallel.description = The maximum number of parallel jobs started for this queue. \
  A value of -1 is substituted with the number of available processors.
 
+queue.ranking.name = Ranking
+queue.ranking.description = Integer value defining the ranking of this queue configuration. \
+ If more than one queue matches a job topic, the one with the highest ranking is used.
 
 #
 # Job Event Handler
