SLING-2830 : Discontinue per job configurations for queue processing  - make service ranking configurable through web console and always apply sorting
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1470855 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/extensions/event/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -61,6 +61,9 @@ queue.maxparallel.name = Maximum Parallel Jobs
 queue.maxparallel.description = The maximum number of parallel jobs started for this queue. \
  A value of -1 is substituted with the number of available processors.
 
+queue.ranking.name = Ranking
+queue.ranking.description = Integer value defining the ranking of this queue configuration. \
+ If more than one queue matches a job topic, the one with the highest ranking is used.
 
 #
 # Job Event Handler
