SLING-2835 :  Addition of OSGi-aware javax.activation bundle. Apply contribution from Robert Munteanu
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1470883 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@
         <module>bundles/extensions/bundleresource</module>
         <module>bundles/extensions/event</module>
         <module>bundles/extensions/fsresource</module>
+        <module>bundles/extensions/javax.activation</module>
         <module>bundles/extensions/settings</module>
         <module>bundles/extensions/threaddump</module>
         <module>bundles/extensions/webconsolebranding</module>
