set svn:ignore and svn info
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1470887 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/javax.activation/pom.xml
+++ b/bundles/extensions/javax.activation/pom.xml
@@ -38,6 +38,12 @@
         <site.javadoc.exclude>**.impl.**</site.javadoc.exclude>
     </properties>    
 
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/javax.activation</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/javax.activation</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/javax.activation</url>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
