--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         
     <artifactId>org.apache.sling.javax.activation</artifactId>
     <packaging>bundle</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <name>Apache Sling javax.activation bundle</name>
     <description>The Apache Sling javax.activation bundle contributes an OSGi-compatible activation bundle.</description>
@@ -39,9 +39,9 @@
     </properties>    
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/javax.activation</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/javax.activation</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/javax.activation</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.javax.activation-0.1.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.javax.activation-0.1.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.javax.activation-0.1.0</url>
     </scm>
 
     <build>
