SLING-2829 :  Add API for starting a job and service interface for executing a job
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1471338 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -74,6 +74,7 @@
                         <Export-Package>
                             org.apache.sling.event;version=2.4.0,
                             org.apache.sling.event.jobs;version=1.2.0,
+                            org.apache.sling.event.jobs.consumer;version=1.0.0,
                             org.apache.sling.event.jobs.jmx;version=1.0.0
                         </Export-Package>
                         <Private-Package>
