--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -65,6 +65,10 @@ queue.ranking.name = Ranking
 queue.ranking.description = Integer value defining the ranking of this queue configuration. \
  If more than one queue matches a job topic, the one with the highest ranking is used.
 
+queue.waitforasync.name = Wait For Async
+queue.waitforasync.description = If a job consumer is processing a job asynchronously, this \
+ flag controls whether the queue waits for the consumer to finish before starting new jobs.
+
 #
 # Job Event Handler
 job.events.name = Apache Sling Job Default Queue 
