SLING-2827 : several improvements/fixes:  * TOPOLOGY_CHANGED is now sent with a delay after TOPOLOGY_CHANGING - this is to avoid 'event floods' during topology changes  * after a TOPOLOGY_CHANGED event is sent, a heartbeat is triggered. This speeds up change propagation. Yet it is by no means    the case that changes now propagate as fast as possible - it is still possible for them to propage only after the    heartbeat-interval (for downstream connector-clients)  * you can now configure a number of topology connectors - this replaces the 'manual' way of connecting in the webconsole    since that is more confusing than helpful: connectors are now only created via config  * announcements sent by topology connectors now carry a version for paranoia compatibility checks  * connector servlet now accepts duplicate/loops but marks them as such - this information is also visible in the webconsole  * connector requests are now PUT and DELETE (rather then POST), and are done using a url of the form 'connector._sling-Id_.json'  * logger.debug wrapped in isDebugEnabled  * a fix with properties changing (cannot do ModifiableHashMap.iterator.remove)  * a fix with proper closing of a resourceResolver to avoid unclosed sessions
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1476138 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/discovery/impl/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/extensions/discovery/impl/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -32,8 +32,14 @@ heartbeatInterval.name = Heartbeat interval (seconds)
 heartbeatInterval.description = Configure the interval (in seconds) according to which the \
  heartbeats are exchanged in the topology. Default is 15 seconds.
 
-topologyConnectorUrl.name = Topology Connector URL
-topologyConnectorUrl.description = URL where to join a topology, e.g. \
+minEventDelay.name = Minimal Event Delay (seconds)
+minEventDelay.description = Configure a minimal delay (in seconds) between TOPOLOGY_CHANGING \
+ and TOPOLOGY_CHANGED. Any further changes happening during this delay are accumulated and \
+ combined in the TOPOLOGY_CHANGED after this delay. THis helps avoiding event-flooding. \
+ Default is 3 seconds. A negative value or zero disables this delay.
+
+topologyConnectorUrls.name = Topology Connector URLs
+topologyConnectorUrls.description = URLs where to join a topology, e.g. \
  http://localhost:4502/libs/sling/topology/connector
 
 topologyConnectorWhitelist.name = Topology Connector Whitelist
