--- a/contrib/extensions/discovery/impl/pom.xml
+++ b/contrib/extensions/discovery/impl/pom.xml
@@ -168,5 +168,12 @@
         	<version>2.0.14</version>
         	<scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.sling</groupId>
+        	<artifactId>org.apache.sling.commons.threads</artifactId>
+        	<version>3.1.0</version>
+        	<type>bundle</type>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
