--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -32,8 +32,14 @@ heartbeatInterval.name = Heartbeat interval (seconds)
 heartbeatInterval.description = Configure the interval (in seconds) according to which the \
  heartbeats are exchanged in the topology. Default is 15 seconds.
 
-topologyConnectorUrl.name = Topology Connector URL
-topologyConnectorUrl.description = URL where to join a topology, e.g. \
+minEventDelay.name = Minimal Event Delay (seconds)
+minEventDelay.description = Configure a minimal delay (in seconds) between TOPOLOGY_CHANGING \
+ and TOPOLOGY_CHANGED. Any further changes happening during this delay are accumulated and \
+ combined in the TOPOLOGY_CHANGED after this delay. THis helps avoiding event-flooding. \
+ Default is 3 seconds. A negative value or zero disables this delay.
+
+topologyConnectorUrls.name = Topology Connector URLs
+topologyConnectorUrls.description = URLs where to join a topology, e.g. \
  http://localhost:4502/libs/sling/topology/connector
 
 topologyConnectorWhitelist.name = Topology Connector Whitelist
