--- a/testing/samples/integration-tests/pom.xml
+++ b/testing/samples/integration-tests/pom.xml
@@ -305,7 +305,7 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.launchpad</artifactId>
             <classifier>standalone</classifier>
-            <version>6</version>
+            <version>7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
