SLING-2818 - move JSP engine config to initial content to avoid timing issues
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1478715 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/test-services/pom.xml
+++ b/launchpad/test-services/pom.xml
@@ -66,7 +66,10 @@
                         <Sling-Nodetypes>
                             SLING-INF/nodetypes/test.cnd
                         </Sling-Nodetypes>
-                        <Sling-Initial-Content>SLING-INF/content;path:=/sling-test</Sling-Initial-Content>
+                        <Sling-Initial-Content>
+                            SLING-INF/content;path:=/sling-test;overwrite=true;uninstall=true,
+                            SLING-INF/install;path:=/apps/sling-test/install;overwrite=true;uninstall=true
+                        </Sling-Initial-Content>
                         <Sling-Bundle-Resources>
                         	/sling-test/sling/from-bundle;path:=/SLING-INF/res/sling-test/sling/from-bundle,
                         	/system;path:=/SLING-INF/res/sling-test/sling/SLING-1733
