Moving discovery to bundles section
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1479282 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,8 @@
         <!-- Extensions -->
         <module>bundles/extensions/adapter</module>
         <module>bundles/extensions/bundleresource</module>
+        <module>extensions/discovery/api</module>
+        <module>extensions/discovery/impl</module>
         <module>bundles/extensions/event</module>
         <module>bundles/extensions/fsresource</module>
         <module>bundles/extensions/javax.activation</module>
