SLING-2853 Commit patch 4 by Amit Gupta (Thanks alot)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1479479 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -88,6 +88,7 @@
           <module>commons/html</module>
           <module>extensions/apt/parser</module>
           <module>extensions/apt/servlet</module>
+          <module>extensions/collection</module>
           <module>extensions/dojo</module>
           <module>extensions/dojo-sling</module>
           <module>extensions/ftpserver</module>
