--- a/contrib/extensions/collection/pom.xml
+++ b/contrib/extensions/collection/pom.xml
@@ -39,7 +39,7 @@
 
     <name>Apache Sling Resource Collection API</name>
     <description>
-        The Apache sling resource collection bundle provides an api to create collections of resources.
+        The Apache Sling resource collection bundle provides an api to manage collections of Resources.
     </description>
 
     <scm>
@@ -78,7 +78,6 @@
     <!-- D E P E N D E N C I E S                                                 -->
     <!-- ======================================================================= -->
     <dependencies>
-       
 
         <!-- sling -->
         <dependency>
@@ -126,6 +125,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit-addons</groupId>
@@ -151,5 +151,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
