SLING-2853 - remove unused dependencies
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1479488 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/collection/pom.xml
+++ b/contrib/extensions/collection/pom.xml
@@ -128,15 +128,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit-addons</groupId>
-            <artifactId>junit-addons</artifactId>
-            <version>1.4</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.framework</artifactId>
-            <version>3.0.8</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
