--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -71,6 +71,16 @@ queue.waitforasync.description = If a job consumer is processing a job asynchron
 
 #
 # Job Event Handler
+job.events.name = Apache Sling Job Managers
+job.events.description = Manages job scheduling on a single system as well \
+ as on a cluster. A Job runs only on a single cluster node. \
+ The respective scheduling is persisted in the resource tree and distributed \
+ amongst the cluster instances. The jobs are started \
+ locally on a single cluster node. Most of the configuration is for \
+ configuring the default job queue.
+ 
+#
+# Job Event Handler
 job.events.name = Apache Sling Job Default Queue 
 job.events.description = The configuration of the default job queue.
 
@@ -108,4 +118,3 @@ job.consumermanager.blacklist.desscription = This is a list of topics which curr
  processed by this instance. Leaving it empty, all job consumers are enabled. Putting a '*' as \
  one entry, disables all job consumers. Adding separate topics disables job consumers for exactly \
  this topic.
-
