--- a/contrib/extensions/collection/pom.xml
+++ b/contrib/extensions/collection/pom.xml
@@ -143,5 +143,11 @@
             <artifactId>servlet-api</artifactId>
             <scope>test</scope>
         </dependency>
+         <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
+            <version>0.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
