SLING-2858 - Maven build fails after upgrading to parent 16: No annotation processors found in classpath
Add explicit org.apache.felix.scr.annotations dependency where needed.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1479937 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/scripting/api/pom.xml
+++ b/bundles/scripting/api/pom.xml
@@ -67,6 +67,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
