SLING-2858 - Maven build fails after upgrading to parent 16: No annotation processors found in classpath
Add explicit org.apache.felix.scr.annotations dependency where needed.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1480072 13f79535-47bb-0310-9956-ffa450edef68

--- a/samples/javashell/pom.xml
+++ b/samples/javashell/pom.xml
@@ -78,5 +78,10 @@
         </plugins>
     </reporting>
     
-    <dependencies/>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
+    </dependencies>
 </project>
