--- a/samples/accessmanager-ui/pom.xml
+++ b/samples/accessmanager-ui/pom.xml
@@ -162,5 +162,9 @@
   </reporting>
   
   <dependencies>
+    <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+    </dependency>       
   </dependencies>  
 </project>
