--- a/samples/usermanager-ui/pom.xml
+++ b/samples/usermanager-ui/pom.xml
@@ -135,6 +135,10 @@
   
   <dependencies>
     <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+    </dependency>    
+    <dependency>
         <groupId>org.apache.jackrabbit</groupId>
         <artifactId>jackrabbit-api</artifactId>
         <version>2.2.5</version>
