--- a/samples/webloader/ui/pom.xml
+++ b/samples/webloader/ui/pom.xml
@@ -77,4 +77,11 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
+    </dependencies>    
 </project>
