--- a/bundles/extensions/discovery/api/pom.xml
+++ b/bundles/extensions/discovery/api/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>org.apache.sling.discovery.api</artifactId>
     <packaging>bundle</packaging>
-    <version>1.0.0</version>
+    <version>0.1.0-SNAPSHOT</version>
 
     <name>Apache Sling Discovery API</name>
     <description>
@@ -37,9 +37,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.discovery.api-1.0.0</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.discovery.api-1.0.0</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.discovery.api-1.0.0</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/extensions/discovery/api</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/extensions/discovery/api</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/contrib/extensions/discovery/api</url>
     </scm>
 
     <build>
