SLING-2870 - Support allowed hosts patterns in ReferrerFilter
* added regex support for allowed hosts configuration
* added unit test to cover the new configuration
* updated configuration description

--- a/contrib/extensions/security/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/extensions/security/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -31,8 +31,8 @@ allow.empty.name = Allow Empty
 allow.empty.description = Allow an empty or missing referrer
 
 allow.hosts.name = Allow Hosts
-allow.hosts.description = List of allowed hosts for the referrer. If this is empty only the default\
- hosts are allowed.
+allow.hosts.description = List of allowed hosts regex for the referrer (e.g. 'http://(.*).host.org'). If this is empty \
+   only the default hosts are allowed.
 
 filter.methods.name = Filter Methods
 filter.methods.description = These methods are filtered by the filter.
