--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,8 @@
         <module>bundles/extensions/bundleresource</module>
         <module>bundles/extensions/discovery/api</module>
         <module>bundles/extensions/discovery/impl</module>
+        <module>bundles/extensions/discovery/support</module>
+        <module>bundles/extensions/discovery/standalone</module>
         <module>bundles/extensions/event</module>
         <module>bundles/extensions/fsresource</module>
         <module>bundles/extensions/javax.activation</module>
