SLING-2822 - webconsole plugin added
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1489927 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/sling-demo/src/main/resources/SLING-CONTENT/apps/hc/demo/ResourcesExistTest-checkAppsExist.json
+++ b/contrib/extensions/healthcheck/sling-demo/src/main/resources/SLING-CONTENT/apps/hc/demo/ResourcesExistTest-checkAppsExist.json
@@ -3,5 +3,6 @@
   "ruleName": "junit",
   "namespace": "sling",
   "jcr:primaryType": "nt:unstructured",
-  "qualifier": "org.apache.sling.hc.demo.tests.ResourcesExistTest#checkAppsExist"
+  "qualifier": "org.apache.sling.hc.demo.tests.ResourcesExistTest#checkAppsExist",
+  "tags" : [ "junit" ]
 }
