SLING-2793 - [Tooling] Align Eclipse tooling to proposed structure
WIP on getting a WST server definition

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1504892 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>slingclipse-api</module>
 		<module>slingclipse-http</module>
 		<module>slingclipse-plugin</module>
+		<module>slingclipse-wst</module>
 		<module>slingclipse-feature</module>
 		<module>slingclipse-p2update</module>
 	</modules>
